--- a/src/components/UserList/UserList.css
+++ b/src/components/UserList/UserList.css
@@ -3,6 +3,8 @@
   justify-content: center;
   flex-direction: column;
   width:25%;
+  height: 100vh;
+  overflow-y: scroll;
 }
 .list-item-wrapper{
   display: flex;
